Ajout titre et icon de l'application, texte en gras par endroit

--- a/app/src/main/res/layout/view_spell_item.xml
+++ b/app/src/main/res/layout/view_spell_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="fr.enlight.anima.animamagiccards.utils.SpellGradeLevel"/>
+
+        <import type="fr.enlight.anima.animamagiccards.utils.SpellGradeLevel" />
 
         <variable
             name="model"
@@ -43,10 +44,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@{model.getBackground(context)}"
-            tools:src="@drawable/card_background_book_free_access"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/card_background_book_free_access" />
 
         <TextView
             android:id="@+id/spell_title"
@@ -76,9 +77,9 @@
             android:maxLines="1"
             android:paddingLeft="@dimen/spacing_xbig"
             android:paddingRight="@dimen/spacing_xbig"
-            android:textStyle="bold"
             android:text="@{model.getSubtitle(context)}"
             android:textSize="9sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/spell_title"
@@ -90,8 +91,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/spacing_big"
             android:layout_marginStart="@dimen/spacing_big"
+            android:text="@{model.getActionType(context)}"
+            android:textColor="@android:color/black"
             android:textSize="11sp"
-            android:text="@{@string/spell_action_type_format(model.spell.actionType)}"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintTop_toTopOf="@id/scroll_guideline"
             tools:text="Action : Active" />
@@ -100,8 +102,9 @@
             android:id="@+id/spell_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@{model.getType(context)}"
+            android:textColor="@android:color/black"
             android:textSize="11sp"
-            android:text="@{@string/spell_type_format(model.spell.type)}"
             app:layout_constraintLeft_toLeftOf="@id/center_guideline"
             app:layout_constraintTop_toTopOf="@id/scroll_guideline"
             tools:text="Type : Attaque" />
@@ -115,9 +118,9 @@
             android:layout_marginLeft="@dimen/spell_grade_border_spacing"
             android:layout_marginStart="@dimen/spell_grade_border_spacing"
             app:layout_constraintBottom_toBottomOf="@id/spell_card_background"
+            app:layout_constraintDimensionRatio="H, 169:92"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/center_guideline"
-            app:layout_constraintDimensionRatio="H, 169:92"
             app:model="@{model.getSpellGradeModel(context, SpellGradeLevel.ADVANCED_LEVEL)}" />
 
         <include
@@ -126,12 +129,12 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="@dimen/spacing_big"
-            android:layout_marginRight="@dimen/spell_grade_border_spacing"
             android:layout_marginEnd="@dimen/spell_grade_border_spacing"
+            android:layout_marginRight="@dimen/spell_grade_border_spacing"
             app:layout_constraintBottom_toBottomOf="@id/spell_card_background"
-            app:layout_constraintRight_toRightOf="@id/spell_card_background"
-            app:layout_constraintLeft_toLeftOf="@id/center_guideline"
             app:layout_constraintDimensionRatio="H, 169:92"
+            app:layout_constraintLeft_toLeftOf="@id/center_guideline"
+            app:layout_constraintRight_toRightOf="@id/spell_card_background"
             app:model="@{model.getSpellGradeModel(context, SpellGradeLevel.ARCANE_LEVEL)}" />
 
         <include
@@ -142,9 +145,9 @@
             android:layout_marginLeft="@dimen/spell_grade_border_spacing"
             android:layout_marginStart="@dimen/spell_grade_border_spacing"
             app:layout_constraintBottom_toTopOf="@id/spell_advanced_grade"
+            app:layout_constraintDimensionRatio="H, 169:92"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/center_guideline"
-            app:layout_constraintDimensionRatio="H, 169:92"
             app:model="@{model.getSpellGradeModel(context, SpellGradeLevel.INITIAL_LEVEL)}" />
 
         <include
@@ -152,35 +155,29 @@
             layout="@layout/view_spell_grade_item"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginRight="@dimen/spell_grade_border_spacing"
             android:layout_marginEnd="@dimen/spell_grade_border_spacing"
+            android:layout_marginRight="@dimen/spell_grade_border_spacing"
             app:layout_constraintBottom_toTopOf="@id/spell_advanced_grade"
-            app:layout_constraintRight_toRightOf="@id/spell_card_background"
-            app:layout_constraintLeft_toLeftOf="@id/center_guideline"
             app:layout_constraintDimensionRatio="H, 169:92"
+            app:layout_constraintLeft_toLeftOf="@id/center_guideline"
+            app:layout_constraintRight_toRightOf="@id/spell_card_background"
             app:model="@{model.getSpellGradeModel(context, SpellGradeLevel.INTERMEDIATE_LEVEL)}" />
 
-
-        <android.support.v4.widget.NestedScrollView
+        <TextView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/spell_action_type"
+            android:layout_marginEnd="@dimen/spacing_big"
+            android:layout_marginLeft="@dimen/spacing_big"
+            android:layout_marginRight="@dimen/spacing_big"
+            android:layout_marginStart="@dimen/spacing_big"
+            android:text="@{model.getEffect(context)}"
+            android:textColor="@android:color/black"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toTopOf="@id/spell_initial_grade"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
-            app:layout_constraintBottom_toTopOf="@id/spell_initial_grade"
-            android:layout_marginLeft="@dimen/spacing_big"
-            android:layout_marginStart="@dimen/spacing_big"
-            android:layout_marginRight="@dimen/spacing_big"
-            android:layout_marginEnd="@dimen/spacing_big" >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="11sp"
-                android:text="@{@string/spell_effect_format(model.spell.effect)}"
-                tools:text="Effet : Projette plusieurs décharges d'énergies magiques. L'attaque se fait sur le Mode Energie et les dégâts sont de 30 points.\n\nChaque sphère peut attaquer des cibles différentes mais dans ce cas, chacune doit être désignée au lancement du sort, avant de lancer les dés.\n\nProjette plusieurs décharges d'énergies magiques. L'attaque se fait sur le Mode Energie et les dégâts sont de 30 points.\n\nChaque sphère peut attaquer des cibles différentes mais dans ce cas, chacune doit être désignée au lancement du sort, avant de lancer les dés."/>
-
-        </android.support.v4.widget.NestedScrollView>
+            app:layout_constraintTop_toBottomOf="@id/spell_action_type"
+            tools:text="Effet : Projette plusieurs décharges d'énergies magiques. L'attaque se fait sur le Mode Energie et les dégâts sont de 30 points.\n\nChaque sphère peut attaquer des cibles différentes mais dans ce cas, chacune doit être désignée au lancement du sort, avant de lancer les dés.\n\nProjette plusieurs décharges d'énergies magiques. L'attaque se fait sur le Mode Energie et les dégâts sont de 30 points.\n\nChaque sphère peut attaquer des cibles différentes mais dans ce cas, chacune doit être désignée au lancement du sort, avant de lancer les dés." />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
