Passage en Fragment des vues (en prévision de la tablette), arrangement des tailles sur les spells

--- a/app/src/main/res/layout/view_spell_item.xml
+++ b/app/src/main/res/layout/view_spell_item.xml
@@ -19,11 +19,18 @@
         app:stackHeaderHeight="150dp">
 
         <android.support.constraint.Guideline
-            android:id="@+id/header_guideline"
+            android:id="@+id/top_header_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.07" />
+            app:layout_constraintGuide_percent="0.05" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/bottom_header_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
 
         <android.support.constraint.Guideline
             android:id="@+id/scroll_guideline"
@@ -41,9 +48,12 @@
 
         <ImageView
             android:id="@+id/spell_card_background"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="H,161:225"
             android:src="@{model.getBackground(context)}"
+            android:layout_marginLeft="@dimen/spacing_large"
+            android:layout_marginRight="@dimen/spacing_large"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -51,46 +61,47 @@
 
         <TextView
             android:id="@+id/spell_title"
-            style="@style/TextAppearance.AppCompat.Inverse"
+            android:textColor="@android:color/white"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
+            android:layout_height="0dp"
             android:gravity="center"
             android:maxLines="1"
-            android:paddingLeft="@dimen/spacing_xbig"
-            android:paddingRight="@dimen/spacing_xbig"
+            android:textSize="@dimen/textSize_title"
+            android:layout_marginLeft="@dimen/spacing_xbig"
+            android:layout_marginStart="@dimen/spacing_xbig"
+            android:layout_marginEnd="@dimen/spacing_xbig"
+            android:layout_marginRight="@dimen/spacing_xbig"
             android:text="@{model.spell.name}"
-            android:textAllCaps="true"
-            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_header_guideline"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/header_guideline"
+            app:layout_constraintTop_toTopOf="@id/top_header_guideline"
             tools:text="Sphère de destruction" />
 
-        <TextView
-            android:id="@+id/spell_book_subtitle"
-            style="@style/TextAppearance.AppCompat.Inverse"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:paddingLeft="@dimen/spacing_xbig"
-            android:paddingRight="@dimen/spacing_xbig"
-            android:text="@{model.getSubtitle(context)}"
-            android:textSize="9sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/spell_title"
-            tools:text="Magie de Destruction Niv. 12" />
+        <!--<TextView-->
+            <!--android:id="@+id/spell_book_subtitle"-->
+            <!--style="@style/TextAppearance.AppCompat.Inverse"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:ellipsize="end"-->
+            <!--android:gravity="center"-->
+            <!--android:maxLines="1"-->
+            <!--android:paddingLeft="@dimen/spacing_xbig"-->
+            <!--android:paddingRight="@dimen/spacing_xbig"-->
+            <!--android:text="@{model.getSubtitle(context)}"-->
+            <!--android:textSize="9sp"-->
+            <!--android:textStyle="bold"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/spell_title"-->
+            <!--tools:text="Magie de Destruction Niv. 12" />-->
 
         <TextView
             android:id="@+id/spell_action_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/spacing_big"
-            android:layout_marginStart="@dimen/spacing_big"
+            android:layout_marginLeft="@dimen/spell_effect_margin"
+            android:layout_marginStart="@dimen/spell_effect_margin"
             android:text="@{model.getActionType(context)}"
             android:textColor="@android:color/black"
             android:textSize="11sp"
@@ -166,13 +177,14 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginEnd="@dimen/spacing_big"
-            android:layout_marginLeft="@dimen/spacing_big"
-            android:layout_marginRight="@dimen/spacing_big"
-            android:layout_marginStart="@dimen/spacing_big"
+            android:layout_marginEnd="@dimen/spell_effect_margin"
+            android:layout_marginLeft="@dimen/spell_effect_margin"
+            android:layout_marginRight="@dimen/spell_effect_margin"
+            android:layout_marginStart="@dimen/spell_effect_margin"
             android:text="@{model.getEffect(context)}"
             android:textColor="@android:color/black"
             android:textSize="11sp"
+            android:ellipsize="end"
             app:layout_constraintBottom_toTopOf="@id/spell_initial_grade"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
