--- a/cardmodel/src/main/res/values/dimens.xml
+++ b/cardmodel/src/main/res/values/dimens.xml
@@ -8,6 +8,10 @@
     <dimen name="spacing_big">32dp</dimen>
     <dimen name="spacing_xbig">40dp</dimen>
 
+    <dimen name="textSize_min">10dp</dimen>
+    <dimen name="textSize_title">20dp</dimen>
+
     <dimen name="spell_header_spacing">28dp</dimen>
     <dimen name="spell_grade_border_spacing">12dp</dimen>
+    <dimen name="spell_effect_margin">36dp</dimen>
 </resources>
