--- a/app/src/main/res/layout/activity_spell.xml
+++ b/app/src/main/res/layout/activity_spell.xml
@@ -4,4 +4,5 @@
     android:id="@+id/fragment_placeholder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ic_background"
     tools:context="fr.enlight.anima.animamagiccards.SpellActivity"/>
