--- a/app/src/main/res/layout/activity_spellbooks_index.xml
+++ b/app/src/main/res/layout/activity_spellbooks_index.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.viewmodels.RecyclerViewModel"/>
+            type="fr.enlight.anima.animamagiccards.views.viewmodels.RecyclerViewModel"/>
     </data>
 
     <android.support.v7.widget.RecyclerView
