--- a/app/src/main/res/layout/view_spellbook_item.xml
+++ b/app/src/main/res/layout/view_spellbook_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.viewmodels.SpellbookViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.spellbooks.viewmodels.SpellbookViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
