--- a/app/src/main/res/layout/view_spell_item.xml
+++ b/app/src/main/res/layout/view_spell_item.xml
@@ -166,7 +166,9 @@
             android:text="@{model.getEffect(context)}"
             android:textColor="@android:color/black"
             android:textSize="11sp"
+            android:maxLines="10"
             android:ellipsize="end"
+            android:onClick="@{() -> model.expandEffect()}"
             app:layout_constraintBottom_toTopOf="@id/spell_initial_grade"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
