--- a/app/src/main/res/layout/dialog_spell_grade.xml
+++ b/app/src/main/res/layout/dialog_spell_grade.xml
@@ -7,106 +7,127 @@
 
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.ui.spellbooks.viewmodels.SpellGradeViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.spellbooks.viewmodels.DialogSpellGradeViewModel" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/spacing_xbig"
-        android:layout_marginRight="@dimen/spacing_xbig"
-        android:background="@drawable/card_spell_grade_background">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:background="@android:color/transparent">
 
-        <android.support.constraint.Guideline
-            android:id="@+id/top_guideline"
-            android:layout_width="wrap_content"
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.12" />
+            android:layout_marginLeft="@dimen/spacing_xbig"
+            android:layout_marginRight="@dimen/spacing_xbig"
+            android:background="@drawable/card_spell_grade_background">
 
-        <android.support.constraint.Guideline
-            android:id="@+id/bottom_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.88" />
+            <android.support.constraint.Guideline
+                android:id="@+id/top_guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.12" />
 
-        <TextView
-            android:id="@+id/spell_grade_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@{model.gradeTitle}"
-            android:textColor="@{model.gradeColor}"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/top_guideline"
-            tools:text="Initial"
-            tools:textColor="@color/initial_grade_color" />
+            <android.support.constraint.Guideline
+                android:id="@+id/bottom_guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.88" />
 
-        <View
-            android:id="@+id/separator"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginEnd="@dimen/spacing_large"
-            android:layout_marginLeft="@dimen/spacing_large"
-            android:layout_marginRight="@dimen/spacing_large"
-            android:layout_marginStart="@dimen/spacing_large"
-            android:layout_marginTop="@dimen/spacing_small"
-            android:background="@color/separator"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spell_grade_title" />
+            <ImageButton
+                android:id="@+id/spell_close_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:layout_marginRight="@dimen/spacing_base"
+                android:layout_marginLeft="@dimen/spacing_base"
+                android:onClick="@{() -> model.onDismissClicked()}"
+                android:src="@drawable/ic_action_navigation_close"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/top_guideline" />
 
-        <TextView
-            android:id="@+id/spell_grade_intelligence"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="2dp"
-            android:text="@{model.intAndZeon}"
-            android:textColor="@android:color/black"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/separator"
-            tools:text="Int : 5 / 30 Zéon" />
+            <TextView
+                android:id="@+id/spell_grade_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@{model.gradeTitle}"
+                android:textColor="@{model.gradeColor}"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/top_guideline"
+                tools:text="Initial"
+                tools:textColor="@color/initial_grade_color" />
 
-        <TextView
-            android:id="@+id/spell_grade_effect"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_base"
-            android:gravity="center_horizontal"
-            android:paddingLeft="@dimen/spacing_large"
-            android:paddingRight="@dimen/spacing_large"
-            android:text="@{model.effect}"
-            android:textColor="@android:color/black"
-            android:textSize="15sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spell_grade_intelligence"
-            tools:text="affecte les animaux naturels (chevaux, lapins, loups, etc.)" />
+            <View
+                android:id="@+id/separator"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginEnd="@dimen/spacing_large"
+                android:layout_marginLeft="@dimen/spacing_large"
+                android:layout_marginRight="@dimen/spacing_large"
+                android:layout_marginStart="@dimen/spacing_large"
+                android:layout_marginTop="@dimen/spacing_small"
+                android:background="@color/separator"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spell_grade_title" />
 
-        <TextView
-            android:id="@+id/spell_grade_retention"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/spacing_base"
-            android:text="@{model.retention}"
-            android:textColor="@android:color/black"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spell_grade_effect"
-            app:setVisible="@{model.retention != null}"
-            tools:text="Maintien : Non" />
+            <TextView
+                android:id="@+id/spell_grade_intelligence"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="2dp"
+                android:text="@{model.intAndZeon}"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/separator"
+                tools:text="Int : 5 / 30 Zéon" />
 
-    </android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/spell_grade_effect"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_base"
+                android:gravity="center_horizontal"
+                android:paddingLeft="@dimen/spacing_large"
+                android:paddingRight="@dimen/spacing_large"
+                android:text="@{model.effect}"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spell_grade_intelligence"
+                tools:text="affecte les animaux naturels (chevaux, lapins, loups, etc.)" />
+
+            <TextView
+                android:id="@+id/spell_grade_retention"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/spacing_base"
+                android:text="@{model.retention}"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spell_grade_effect"
+                app:setVisible="@{model.retention != null}"
+                tools:text="Maintien : Non" />
+
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+
+
 </layout>
