--- a/app/src/main/res/layout/view_spellbook_loading.xml
+++ b/app/src/main/res/layout/view_spellbook_loading.xml
@@ -26,20 +26,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.tuyenmonkey.mkloader.MKLoader
-            android:id="@+id/progress"
-            style="@style/Widget.AppCompat.ProgressBar"
-            app:layout_constraintTop_toTopOf="@id/spell_card_background"
-            app:layout_constraintBottom_toBottomOf="@id/spell_card_background"
-            app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
-            app:layout_constraintRight_toRightOf="@id/spell_card_background"
-            app:layout_constraintVertical_bias="0.2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:mk_type="TwinFishesSpinner"
-            android:layout_gravity="center"
-            android:visibility="invisible"/>
-
         <ImageView
             android:id="@+id/spellbook_icon"
             android:layout_width="wrap_content"
@@ -57,12 +43,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            app:layout_constraintTop_toBottomOf="@id/progress"
+            app:layout_constraintBottom_toTopOf="@id/spellbook_icon"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
+            app:customFont="@{@string/technical_font}"
             android:text="@string/Loading_Message"
-            android:layout_marginTop="@dimen/spacing_base"
-            android:textSize="24sp" />
+            android:layout_marginBottom="@dimen/spacing_large"
+            android:textSize="40sp" />
 
 
     </android.support.constraint.ConstraintLayout>
