--- a/app/src/main/res/layout/activity_spell.xml
+++ b/app/src/main/res/layout/activity_spell.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_placeholder"
+    android:paddingTop="@dimen/status_bar_height"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_background"
