--- a/app/src/main/res/layout/view_spell_item.xml
+++ b/app/src/main/res/layout/view_spell_item.xml
@@ -50,10 +50,10 @@
             android:id="@+id/spell_card_background"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="H,161:225"
-            android:src="@{model.getBackground(context)}"
             android:layout_marginLeft="@dimen/spacing_large"
             android:layout_marginRight="@dimen/spacing_large"
+            android:src="@{model.getBackground(context)}"
+            app:layout_constraintDimensionRatio="H,161:225"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -61,17 +61,18 @@
 
         <TextView
             android:id="@+id/spell_title"
-            android:textColor="@android:color/white"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginEnd="@dimen/spacing_xbig"
+            android:layout_marginLeft="@dimen/spacing_xbig"
+            android:layout_marginRight="@dimen/spacing_xbig"
+            android:layout_marginStart="@dimen/spacing_xbig"
             android:gravity="center"
             android:maxLines="1"
-            android:textSize="@dimen/textSize_title"
-            android:layout_marginLeft="@dimen/spacing_xbig"
-            android:layout_marginStart="@dimen/spacing_xbig"
-            android:layout_marginEnd="@dimen/spacing_xbig"
-            android:layout_marginRight="@dimen/spacing_xbig"
             android:text="@{model.spell.name}"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/textSize_title"
+            app:customFont="@{@string/spell_title_font}"
             app:layout_constraintBottom_toBottomOf="@id/bottom_header_guideline"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -86,7 +87,8 @@
             android:layout_marginStart="@dimen/spell_effect_margin"
             android:text="@{model.getActionType(context)}"
             android:textColor="@android:color/black"
-            android:textSize="11sp"
+            android:textSize="12sp"
+            app:customFont="@{@string/regular_font}"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintTop_toTopOf="@id/scroll_guideline"
             tools:text="Action : Active" />
@@ -97,7 +99,8 @@
             android:layout_height="wrap_content"
             android:text="@{model.getType(context)}"
             android:textColor="@android:color/black"
-            android:textSize="11sp"
+            android:textSize="12sp"
+            app:customFont="@{@string/regular_font}"
             app:layout_constraintLeft_toLeftOf="@id/center_guideline"
             app:layout_constraintTop_toTopOf="@id/scroll_guideline"
             tools:text="Type : Attaque" />
@@ -163,12 +166,13 @@
             android:layout_marginLeft="@dimen/spell_effect_margin"
             android:layout_marginRight="@dimen/spell_effect_margin"
             android:layout_marginStart="@dimen/spell_effect_margin"
+            android:ellipsize="end"
+            android:maxLines="10"
+            android:onClick="@{() -> model.expandEffect()}"
             android:text="@{model.getEffect(context)}"
             android:textColor="@android:color/black"
-            android:textSize="11sp"
-            android:maxLines="10"
-            android:ellipsize="end"
-            android:onClick="@{() -> model.expandEffect()}"
+            android:textSize="12sp"
+            app:customFont="@{@string/regular_font}"
             app:layout_constraintBottom_toTopOf="@id/spell_initial_grade"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
