--- a/cardmodel/src/main/res/values/dimens.xml
+++ b/cardmodel/src/main/res/values/dimens.xml
@@ -8,10 +8,16 @@
     <dimen name="spacing_big">32dp</dimen>
     <dimen name="spacing_xbig">40dp</dimen>
 
-    <dimen name="textSize_min">10dp</dimen>
-    <dimen name="textSize_title">20dp</dimen>
+    <dimen name="textSize_min">10sp</dimen>
+
+    <dimen name="textSize_tecnhical">40sp</dimen>
+    <dimen name="textSize_title">32sp</dimen>
+    <dimen name="textSize_grade_subtitle">15sp</dimen>
+    <dimen name="textSize_regular">12sp</dimen>
 
     <dimen name="spell_header_spacing">28dp</dimen>
     <dimen name="spell_grade_border_spacing">12dp</dimen>
     <dimen name="spell_effect_margin">36dp</dimen>
+
+    <dimen name="status_bar_height">24dp</dimen>
 </resources>
